# px4_ros_workspace_final

./: README.md
px4_interface/: CMakeLists.txt  package.xml
px4_interface/msg/: GyroControl.msg  InstanceEvent.msg  InstanceList.msg  MissionCommand.msg  MissionPlan.msg  MissionPlanForDrone.msg  MissionStatus.msg  MissionWaypoint.msg  PX4Status.msg  UIStatus.msg
px4_sim_cpp/: CMakeLists.txt  package.xml
px4_sim_cpp/launch/: drone_bringup.launch.py  gcs_core.launch.py
px4_sim_cpp/src/: gcs_gyro_gateway_node.cpp  gyro_control_node.cpp  mission_control_node.cpp  mission_planner_node.cpp  px4_interface_bag_recorder.cpp  px4_status_node.cpp
px4_sim_py/: package.xml  setup.cfg  setup.py
px4_sim_py/px4_sim_py/: gcs_mission_gateway.py  px4_instance_manager.py  px4_status_aggregator.py
