<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>px4_sim_cpp</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="lim@todo.todo">lim</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>px4_msgs</depend>
  <depend>px4_interface</depend>
  <depend>tf2</depend>
  <depend>nlohmann_json</depend>
  <depend>rosbag2_cpp</depend>
  <depend>rosbag2_storage</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
